FamilyLeads/force-app/main/default/objects/Child__c/Child__c.object-meta.xml
<CustomObject>
    <label>Child</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Child Lead Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Children</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>