FamilyLeads/force-app/main/default/objects/Child__c/fields/Child_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Name__c</fullName>
    <formula>First_Name__c + &quot; &quot; + Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Name</label>
    <type>Text</type>
</CustomField>