FamilyLeads/force-app/main/default/objects/Child__c/fields/Converted_Contact__c.field-meta.xml
<CustomField>
    <fullName>Converted_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lead Children</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>