FamilyLeads/force-app/main/default/objects/Child__c/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program_Interests</valueSetName>
    </valueSet>
</CustomField>