FamilyLeads/force-app/main/default/objects/Child__c/fields/Parent_Is_Converted__c.field-meta.xml
<CustomField>
    <fullName>Parent_Is_Converted__c</fullName>
    <formula>Parent__r.IsConverted</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Is Converted</label>
    <type>Checkbox</type>
</CustomField>